Add Hero section to page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import './variables';
+@import './mixins';
 @import './general';
 
 //* layout
 @import './layout/navbar';
+@import './layout/hero';
