--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,154 @@ li {
   width: 25px;
   background-color: #0b0a0c;
 }
+
+@media (min-width: 767px) {
+  .hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-height: 100vh;
+  }
+}
+
+.hero__container {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0 2em;
+  width: 90%;
+  max-width: 1200px;
+  padding-bottom: 8em;
+  margin: 0 auto;
+}
+
+@media (min-width: 767px) {
+  .hero__container {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+  }
+}
+
+.hero__avatar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 100vh;
+}
+
+@media (min-width: 767px) {
+  .hero__avatar {
+    min-height: auto;
+  }
+}
+
+.hero__img-container {
+  position: relative;
+  width: 85%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.hero__img {
+  display: block;
+  width: 100%;
+  border-radius: 50%;
+  margin: 0 auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.hero__circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.hero__circle--blue {
+  top: -18px;
+  left: 15px;
+  background-color: #3452ff;
+  -webkit-box-shadow: 5px -5px 20px #3452ff;
+          box-shadow: 5px -5px 20px #3452ff;
+}
+
+.hero__circle--cream {
+  top: 18px;
+  left: -15px;
+  background-color: #d3a583;
+  -webkit-box-shadow: -5px 5px 20px #d3a583;
+          box-shadow: -5px 5px 20px #d3a583;
+}
+
+.hero__text {
+  font-size: 2.2rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+@media (min-width: 767px) {
+  .hero__text {
+    text-align: left;
+  }
+}
+
+@media (min-width: 992px) {
+  .hero__text {
+    font-size: 2.4em;
+  }
+}
+
+.hero__text .bold {
+  display: block;
+  font-weight: 700;
+}
+
+@media (min-width: 767px) {
+  .hero__text .bold {
+    font-size: 3.2rem;
+  }
+}
+
+.hero__line {
+  position: absolute;
+  width: 4px;
+  height: 150%;
+  background-color: #0b0a0c;
+  -webkit-transform: rotate(30deg);
+          transform: rotate(30deg);
+  z-index: -1;
+}
+
+.hero__line:nth-child(1) {
+  top: -4rem;
+  right: 12rem;
+}
+
+.hero__line:nth-child(2) {
+  top: -5rem;
+  right: 9rem;
+}
+
+.hero__line:nth-child(3) {
+  top: -6rem;
+  right: 6rem;
+}
