--- a/css/style.css
+++ b/css/style.css
@@ -301,3 +301,48 @@ li {
 .about__social-link:hover {
   background-color: #3452ff;
 }
+
+.skills__container {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 2em 0 11em 0;
+}
+
+.skills__title {
+  color: #999;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 0.05em;
+  margin-bottom: 2em;
+}
+
+.skills__desc {
+  font-size: 1.6em;
+  text-align: center;
+}
+
+.skills__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(100px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 1.5em;
+  margin-top: 3em;
+}
+
+.skills__content img {
+  padding: 1em;
+  border-radius: 10px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.skills__content img:hover {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
