--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -2,10 +2,10 @@
   position: fixed;
   width: 100vw;
   background-color: transparent;
-  transition: all 0.3s ease;
   z-index: 3;
+  transition: background-color 0.3s ease;
 
-  &--active {
+  &--fixed {
     background-color: $clr-white;
     box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.05);
   }
