Display skill list using JS

--- a/scss/layout/_skills.scss
+++ b/scss/layout/_skills.scss
@@ -19,7 +19,7 @@
     text-align: center;
   }
 
-  &__content {
+  &__list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     gap: 1.5em;
