--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ li {
   text-align: center;
 }
 
-.skills__content {
+.skills__list {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(100px, 1fr))[auto-fill];
@@ -331,7 +331,7 @@ li {
   margin-top: 3em;
 }
 
-.skills__content img {
+.skills__list img {
   padding: 1em;
   border-radius: 10px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -340,7 +340,7 @@ li {
   transition: all 0.3s ease;
 }
 
-.skills__content img:hover {
+.skills__list img:hover {
   -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
           box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   -webkit-transform: scale(1.1);
