Add toggleSidebar functionality

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 
 //* layout
 @import './layout/navbar';
+@import './layout/sidebar';
 @import './layout/hero';
 @import './layout/about';
 @import './layout/skills';
