--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,82 @@ li {
   background-color: #0b0a0c;
 }
 
+.sidebar {
+  position: fixed;
+  right: 0;
+  max-width: 550px;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  z-index: 5;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.sidebar--active {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+.sidebar-background {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 5;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.sidebar-background--active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.sidebar__close-btn {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  width: 42px;
+  height: 42px;
+  cursor: pointer;
+}
+
+.sidebar__line {
+  position: absolute;
+  left: 0;
+  top: 21px;
+  width: 42px;
+  height: 3px;
+  background-color: #0b0a0c;
+}
+
+.sidebar__line:nth-child(1) {
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.sidebar__line:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.sidebar__container {
+  padding: 6em 5em;
+}
+
+.sidebar__title {
+  color: #999;
+}
+
+.sidebar__title-menu {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
 .hero {
   background-color: #f0f7fb;
 }
