--- a/scss/layout/_skills.scss
+++ b/scss/layout/_skills.scss
@@ -26,6 +26,7 @@
     margin-top: 3em;
 
     img {
+      width: 100%;
       padding: 1em;
       border-radius: 10px;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
